--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
 before_install:
   - gem install xcpretty
 script:
-  - rake "clean[JavaScriptBridge.xcworkspace, 'JavaScriptBridge UICatalog Tests HelloWorld']"
-  - rake "build[JavaScriptBridge.xcworkspace, 'JavaScriptBridge UICatalog Tests HelloWorld']"
-  - rake "test[JavaScriptBridge.xcworkspace, 'Tests']"
+  - rake "clean[JavaScriptBridge.xcworkspace, 'JavaScriptBridgeApp libJavaScriptBridge UICatalog HelloWorld']"
+  - rake "build[JavaScriptBridge.xcworkspace, 'JavaScriptBridgeApp libJavaScriptBridge UICatalog HelloWorld']"
+  - rake "test[JavaScriptBridge.xcworkspace, 'libJavaScriptBridge']"
    
